backporting fixes
Signed-off-by: Henry Lindeman <henry.lindeman@glean.com>